--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://github.com/SolaDevSolide" target="_blank" rel="noopener noreferrer">
                 <img src="profile.png" alt="GitHub SolaDevSolide" class="circular-image hidden">
               </a>
-            <p class="hidden">Bon attention, je risque de vous retourner le cerveau, Solaris n'est ni mon nom, ni mon prénom, mais un pseudonyme...
+            <p class="hidden">Bon attention, je risque de vous retourner le cerveau, Solaris n'est ni mon nom, ni mon prénom, mais un pseudonyme, mon vrai prénom c'est Hugo.
 
                 Alors l'origine story de mon pseudo n'est pas vraiment intéressant mais bon voilà : moi aimer l'astronomie -> Solaris sonne comme polaris -> Moi être Solaris.
             </p>
